2010-03-15 MA Yue <velly.empire@gmail.com>
    * Add some Nautilus Script
    * Add title bar layout setting

2010-03-15 MA Yue <velly.empire@gmail.com>

    * Add functionality for changing /apps/gnome-power-manager/lock/hibernate
                                     /apps/gnome-power-manager/lock/suspend
                                     /apps/nautilus/preferences/desktop_is_home_dir
                                     /apps/gnome-screensaver/user_switch_enabled
                                     /apps/indicator-session/suppress_logout_restart_shutdown
                                     /apps/nautilus/preferences/show_advanced_permissions
                                     /apps/gnome-power-manager/lock/blank_screen

2010-03-15 Starboy Qi <starboy.qi@gmail.com>

    * Change stardict icon
    * Optimize virtualbox installation
    * Add a button in "Tip of the day" window for submitting Linux skills
    * Make several download URL cacheable
    * Add capability for changing name of My computer icon, Home folder icon, Network server icon and Trash icon

2010-03-12 Homer Xing <homer.xing@gmail.com>

    * Use socket instead of ping for detecting server speed.
    * Improve efficiency of server speed detection.
    * Use ~/.config/.ailurus instead of ~/.ailurus .

2010-03-12 CHEN Yangyang <skabyy@gmail.com>

    * Add a feature to merge the files in /etc/apt/sources.list.d/ to /etc/apt/sources.list in the "Find fastest repository mirror" pane.
    * Add a frame border to the scroll area in the "Find fastest repository mirror" pane.
    * Add a button to skip the network checking in quick setup dialog.
    * Change the implementation of nautilus setting using signal.

2010-03-08 Starboy Qi <starboy.qi@gmail.com>

    * Add extcalc, a awesome calculator.
    * Update fcitx to latest version.

2010-03-08 MA Yue <velly.empire@gmail.com>

    * Add Firefox stable repository.
    * Add Typespeed, a typing practise game.
