@@ -1,6 +1,8 @@
-2010-03-15 MA Yue <velly.empire@gmail.com>
+2010-03-16 MA Yue <velly.empire@gmail.com>
+    * Add the function of Changing the default windowmanager filemanager panel 
+
+2010-03-16 MA Yue <velly.empire@gmail.com>
     * Add some Nautilus Script
-    * Add title bar layout setting
 
 2010-03-15 MA Yue <velly.empire@gmail.com>
 
